--- a/style.css
+++ b/style.css
@@ -2,7 +2,7 @@
     --primary-color:rgb(2, 65, 255);
     --secondary-color:rgb(0, 120, 224);
 
-    background-color: white;
+    font-size: 20px;
 }
 
 .parent > * {
@@ -10,12 +10,9 @@
 }
 
 .box{
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    font-size: 50px;
-    color: white;
-    
+background-color: var(--primary-color);
+width: 62.5rem;
+height: 62.5rem;
 }
 
 .box1{
